@@ -3,6 +3,11 @@
 # Distributed under the GPL v2
 # $Id$
 
+  01 Nov 2010; Raúl Porcel <armin76@gentoo.org>
+  modules/catalyst/arch/mips.py:
+  Add patch for Loongson support, patch by Zhang Le <r0bertz at gentoo dot
+  org>, bug #330241
+
   26 Sep 2010; Raúl Porcel <armin76@gentoo.org>
   modules/catalyst/arch/arm.py:
   ARM fixes
